--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/register": "^7.4.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "express": "^4.17.0",
+    "mongoose": "^5.5.10",
     "nodemon": "^1.19.0"
   },
   "devDependencies": {
